Bug: toggle spacing fix

--- a/src/presentational/ToggleBar.css
+++ b/src/presentational/ToggleBar.css
@@ -5,7 +5,7 @@
 	margin: 0px 10px 10px 10px;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -17,8 +17,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: flex-start;
-	margin-right: 5px;
+	justify-content: center;
 	min-width: 170px;
 }
 
